--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -25,32 +24,36 @@
   <body>
     <canvas id="bg"></canvas>
 
-    <main class="mooon">
-      <header>
+    <main>
+      <header class="smol">
         <h1 class="font-weight-bold pb-5" style="font-size: 4rem">
           Jason <br />
           Williams
         </h1>
+        <audio id="mozart" loop preload="auto" style="display: none">
+          <source src="sounds/Mozart_No21.ogg" type="audio/ogg" />
+          <source src="sounds/Mozart_No21.mp3" type="audio/mpeg" />
+        </audio>
         <h3 class="pt-5">Welcome to my Portfolio!🌌</h3>
       </header>
 
-      <section>
+      <section class="smol">
         <h2>About Me 😎</h2>
         <p>
           I have an avid interest in all things related to Software Development,
-          Fintech and Web3.A lot of my time is spent programming and catching up
-          on the latest tech news. It is my firm belief that technology will
+          Fintech and Web3. A lot of my time is spent programming and catching
+          up on the latest tech news. It is my firm belief that technology will
           aide in furthering the development of my country. Web3 will help to
           reshape the internet as we know it.
         </p>
       </section>
 
-      <section class="three">
+      <section class="three smol">
         <div id="projects" class="container-fluid bg-3 text-center">
           <h1 class="margin">App Projects 📱</h1>
           <br />
           <div class="row text-center">
-            <div class="col-sm-4">
+            <div class="col-sm-4 pb-3">
               <div class="thumbnail">
                 <img
                   src="images/crypto1.jpg"
@@ -76,7 +79,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 pb-3">
               <div class="thumbnail">
                 <img
                   src="images/clima1.jpg"
@@ -132,7 +135,7 @@
           <br />
 
           <div class="row text-center">
-            <div class="col-sm-4">
+            <div class="col-sm-4 pb-4">
               <div class="thumbnail">
                 <img
                   src="images/destini1.jpg"
@@ -157,7 +160,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 pb-4">
               <div class="thumbnail">
                 <img
                   src="images/corona1.jpg"
@@ -211,14 +214,15 @@
       </section>
 
       <!-- Web Projects-->
-      <section class="three">
+      <section class="three smol">
         <div id="web" class="container-fluid text-center">
-          <h1 class="margin">Web Projects</h1>
+          <h1 class="margin">Web Projects🌎</h1>
           <br />
           <div class="row text-center">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/newsApp.jpg"
                   alt="Vue News"
                   style="height: 18rem; width: 30rem"
@@ -236,9 +240,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/django-blog.jpg"
                   alt="Django Blog"
                   style="height: 18rem; width: 30rem"
@@ -264,12 +269,13 @@
       <section class="three">
         <!-- Certificate Container (Grid) -->
         <div id="certificates" class="container-fluid bg-1 text-center">
-          <h2 class="margin">Certificates</h2>
+          <h2 class="margin">Certificates📜</h2>
           <br />
           <div class="row text-center pt-1">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/googleDigital.png"
                   alt="Fundamentals of Digital Marketing"
                   style="height: 360px; width: 30rem"
@@ -289,9 +295,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/flutterDev.png"
                   alt="Flutter Development"
                   style="height: 360px; width: 30rem"
@@ -316,9 +323,10 @@
 
           <br />
           <div class="row text-center">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/designThinking.jpg"
                   alt="Design Thinking"
                   style="height: 360px"
@@ -338,9 +346,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/prescence.jpg"
                   alt="Creating a Professional Online Prescence"
                   style="height: 360px"
@@ -364,14 +373,15 @@
           <br />
 
           <div class="row text-center">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/financialStatements.jpg"
                   alt="Reading Financial Statements"
                   style="height: 360px; width: 30rem"
                 />
-                <p style="color: black">
+                <p>
                   <strong>Reading Financial Statements </strong>
                 </p>
                 <div>
@@ -386,9 +396,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/SMC.jpg"
                   alt="Creating a Social Media Marketing Campaign"
                   style="height: 360px"
@@ -412,9 +423,10 @@
 
           <br />
           <div class="row text-center">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/designThinking.jpg"
                   alt="Design Thinking"
                   style="height: 360px; width: 30rem"
@@ -434,9 +446,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <img
+                  class="img-fluid"
                   src="images/react.jpg"
                   alt="Modern React with Redux"
                   style="height: 360px; width: 30rem"
@@ -460,19 +473,20 @@
         </div>
       </section>
 
-      <section class="three">
+      <section class="three smol">
         <!-- Article Container (Grid) -->
         <div id="articles" class="container-fluid bg-1 text-center">
-          <h2 class="margin">My Articles</h2>
+          <h2 class="margin">My Articles📰</h2>
           <br />
-          <div class="row text-center pt-1">
-            <div class="col">
+          <div class="row text-center">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <a
                   href="https://jacenwriter.medium.com/how-to-get-tech-jobs-and-internships-in-jamaica-d9f2289f82d6"
                   target="_blank"
                 >
                   <img
+                    class="img-fluid"
                     src="images/tech_jobs.jpg"
                     alt="How to get Tech Jobs and Internships"
                     style="height: 360px; width: 30rem"
@@ -493,13 +507,14 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <a
                   href="https://jacenwriter.medium.com/how-to-buy-crypto-currencies-from-jamaica-a84b6af9f9a7"
                   target="_blank"
                 >
                   <img
+                    class="img-fluid"
                     src="images/crypto_buy.jpg"
                     alt="How to Buy Crypto Currencies"
                     style="height: 360px; width: 30rem"
@@ -527,13 +542,14 @@
 
           <br />
           <div class="row text-center">
-            <div class="col">
+            <div class="col-lg pb-4">
               <div class="thumbnail">
                 <a
-                  href="https://jacenwriter.medium.com/how-to-buy-crypto-currencies-from-jamaica-a84b6af9f9a7"
+                  href="https://jacenwriter.medium.com/how-to-transfer-crypto-to-a-wallet-and-stake-it-1e5b2a13e112"
                   target="_blank"
                 >
                   <img
+                    class="img-fluid"
                     src="images/crypto_stake.jpg"
                     alt="How to Transfer Crypto to a Wallet"
                     style="height: 360px; width: 30rem"
@@ -545,7 +561,7 @@
                   >
                 </p>
                 <a
-                  href="https://jacenwriter.medium.com/how-to-buy-crypto-currencies-from-jamaica-a84b6af9f9a7"
+                  href="https://jacenwriter.medium.com/how-to-transfer-crypto-to-a-wallet-and-stake-it-1e5b2a13e112"
                   target="_blank"
                 >
                   <button type="button" class="btn btn-primary btn-lg">
@@ -554,13 +570,14 @@
                 </a>
               </div>
             </div>
-            <div class="col">
+            <div class="col-lg">
               <div class="thumbnail">
                 <a
                   href="https://jacenwriter.medium.com/how-to-buy-crypto-currencies-on-pancakeswap-8da468b26005"
                   target="_blank"
                 >
                   <img
+                    class="img-fluid"
                     src="images/crypto_pancake.jpg"
                     alt="How to Transfer Crypto to a Wallet"
                     style="height: 360px; width: 30rem"
@@ -584,14 +601,17 @@
       </section>
 
       <section class="quote">
-        <h2 class="py-5 text-center">
-          "The Journey of a Thousand Miles begins with a Single Step"
-          <br /><i>-Lao Tzu</i>
-        </h2>
+        <div class="py-3">
+          <h2 class="text-center">🛣</h2>
+          <h2 class="text-center">
+            "The Journey of a Thousand Miles begins with a Single Step"
+            <br /><i>-Lao Tzu</i>
+          </h2>
+        </div>
       </section>
 
-      <section class="quote marge">
-        <h1 class="text-center fw-5 pb-5">Contact</h1>
+      <section class="quote marge col-12">
+        <h1 class="text-center fw-5 pb-5">Contact📞</h1>
         <div class="row text-center">
           <div class="col-sm-4">
             <a href="mailto:jasonwilliamsr8@gmail.com" target="_blank"
