reduce file size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       sizes="20×20"
       href="images/me-circle.png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Vite App</title>
   </head>
   <body>
